# otus_cpp_14

./: .travis.yml  CMakeLists.txt  README.md
include/: map_reduce_runner.h  prefix_functors.h
src/: main.cpp
test/: project_path.h.in  test_yamr.cpp
test/data/: test.1.in.txt  test.2.in.txt  test.3.in.txt  test.mg-no-new-line.in.txt  test.mg.in.txt
